--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -15,7 +15,7 @@
         "mpris"
     ],
     "modules-center": [
-        "clock",
+        "clock"
     ],
     "modules-right": [
         // "custom/vkeyboard",
@@ -32,7 +32,7 @@
         "format-icons": {
             "default": "",
             "active": ""
-        },
+        }
     },
     "keyboard-state": {
         "numlock": true,
@@ -293,7 +293,7 @@
         "exec": "swaync-client -swb",
         "on-click": "swaync-client -t -sw",
         "on-click-right": "swaync-client -d -sw",
-        "escape": true,
+        "escape": true
     },
     "privacy": {
         "icon-spacing": 10,
@@ -327,5 +327,5 @@
                 "name": "obs"
             }
         ]
-    },
+    }
 }
